<?xml version="1.0" encoding="utf-8"?>
<!--<RelativeLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/activity_quiz"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--tools:context="io.jaylim.android.geoquiz.QuizActivity">-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Hello World!"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true" />-->
    <!---->
    <!---->
<!--</RelativeLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:weightSum="1"
  android:orientation="vertical">


  <TextView
    android:id="@+id/question_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp" />

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
      android:id="@+id/true_button"
      android:text="@string/true_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

    <Button
      android:id="@+id/false_button"
      android:text="@string/false_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  </LinearLayout>

  <Button
    android:id="@+id/cheat_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/cheat_button" />



  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageButton
      android:id="@+id/prev_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/arrow_left"
      android:contentDescription="@string/prev_button"/>

    <ImageButton
      android:id="@+id/next_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/arrow_right"
      android:contentDescription="@string/next_button"/>

  </LinearLayout>

</LinearLayout>